# dependencies

./: .gitattributes  .gitignore  firmware.code-workspace
ch32sdk/: CMakeLists.txt
ch32sdk/core/: system_ch32v20x.c  system_ch32v20x.h
ch32sdk/ld/: ch32v20x.ld  ch32v20x_D6.ld  ch32v20x_D8.ld  ch32v20x_D8W.ld  esc_ch32v20x_D6.ld  esc_ch32v20x_D6_app.ld
cmake/: common.cmake  optimization.cmake
cmake/arm/: K1921VK035.cmake
cmake/ch32/: CH32V0.cmake  CH32V2.cmake  CH32Vcommon.cmake
cmake/toolchain/: arm-none-eabi.cmake  gcc.cmake  riscv-none-embed.cmake
common/esc/: esc_sectors.ld  esc_version.h
niietsdk/: CMakeLists.txt
niietsdk/Device/NIIET/K1921VK035/Source/: system_K1921VK035.c
niietsdk/Device/NIIET/K1921VK035/Source/GCC/: K1921VK035.ld  K1921VK035_app.ld  esc_K1921VK035.ld  esc_K1921VK035_app.ld
tools/arm/: install-toolchain.ps1  install-toolchain.sh
tools/openocd/: copy-openocd-mounriver.cmd  copy-openocd-mounriver.ps1  download-openocd-vk035.cmd  download-openocd-vk035.ps1  install-openocd.cmd  install-openocd.ps1  install-openocd.sh
tools/risc/: export-riscv-compilers.sh  install-risc-from-openwch.cmd  install-risc-from-openwch.ps1  install-risc-from-openwch.sh  install-risc-toolchain.cmd  install-risc-toolchain.ps1  install-sifive-toolchain.sh  install-toolchain.cmd  install-toolchain.ps1  install-toolchain.sh  riscv-none-embed-gcc-v1.4.7z
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/: README.md  version.txt
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/distro-info/: CHANGELOG.md
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/distro-info/licenses/binutils-2.32/: README-maintainer-mode
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/distro-info/licenses/expat-2.2.5/: CMake.README  README.md
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/distro-info/licenses/gdb-8.3/: NEWS  README
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/distro-info/licenses/gmp-6.1.2/: NEWS
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/distro-info/licenses/isl-0.18/: AUTHORS  README
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/distro-info/licenses/libelf-0.8.13/: README
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/distro-info/licenses/libiconv-1.15/: DEPENDENCIES  NEWS  README.djgpp  README.windows  THANKS
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/distro-info/licenses/mpc-1.0.3/: NEWS
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/distro-info/licenses/mpfr-3.1.6/: NEWS  README
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/distro-info/licenses/newlib-3.0.0/: COPYING.LIBGLOSS  COPYING.NEWLIB  README-maintainer-mode
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/distro-info/licenses/xz-5.2.3/: NEWS  README  THANKS
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/distro-info/patches/: binutils-gdb-2.29.patch  binutils-gdb-2.30.patch  binutils-gdb-2.32.patch  python-2.7.13.amd64.patch  python-2.7.13.patch
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/distro-info/scripts/: VERSION  build.sh  container-apps-functions-source.sh  container-build (copy).sh  container-build-easy.sh  container-build.sh  container-libs-functions-source.sh  defs-source.sh  git-clone.sh  host-defs-source.sh  python-win-config.sh
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/distro-info/scripts/helper/: LICENSE  README.md  common-functions-source.sh  container-functions-source.sh  host-functions-source.sh  templates.sh
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/doc/info/: annotate.info  cpp.info  dir  gcc.info  gccinstall.info  gdb.info  ld.info
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/doc/man/man1/: riscv-none-embed-ar.1  riscv-none-embed-as.1  riscv-none-embed-cpp.1  riscv-none-embed-gcov-dump.1  riscv-none-embed-gcov.1  riscv-none-embed-gdb.1  riscv-none-embed-gdbserver.1-py  riscv-none-embed-objdump.1  riscv-none-embed-readelf.1  riscv-none-embed-size.1  riscv-none-embed-strings.1  riscv-none-embed-strip.1  riscv-none-embed-windmc.1
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/doc/man/man5/: riscv-none-embed-gdbinit.5-py
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/doc/man/man7/: gfdl.7  gpl.7
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/include/gdb/: jit-reader.h
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/riscv-none-embed/include/: IQmath_RV32.h  ctype.h  getopt.h  langinfo.h  newlib.h  stdio.h  stdlib.h  string.h  time.h  wchar.h
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/riscv-none-embed/include/machine/: ieeefp.h  syscall.h
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/riscv-none-embed/include/newlib-nano/: newlib.h
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/riscv-none-embed/include/sys/: _default_fcntl.h  _types.h  cdefs.h  config.h  features.h  fenv.h  queue.h  reent.h  signal.h  time.h
tools/risc/riscv-toolchain/risc-none-embed-gcc-8.2.0/riscv-none-embed/lib/ldscripts/: elf32lriscv.x  elf32lriscv.xbn  elf32lriscv.xc  elf32lriscv.xce  elf32lriscv.xd  elf32lriscv.xdc  elf32lriscv.xdce  elf32lriscv.xde  elf32lriscv.xdw  elf32lriscv.xdwe  elf32lriscv.xe  elf32lriscv.xn  elf32lriscv.xr  elf32lriscv.xs  elf32lriscv.xsc  (+29 more)
(+112 files in other folders)
